Add Border Radius and Shadows

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/ExactScoresLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/ExactScoresLeaderboardTile.razor
@@ -20,7 +20,7 @@
         }
         else if (_leaderboard?.Entries is { Count: > 0 } entries)
         {
-            <div class="table-responsive">
+            <div class="table-responsive rounded">
                 <table class="leaderboard-table text-white">
                     <thead>
                         <tr>
