--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
@@ -17,7 +17,7 @@
                           AwayScore="Match.ActualAwayTeamScore" />
     </div>
     <div class="card-body">
-        <div class="table-responsive flex-grow-1">
+        <div class="table-responsive rounded flex-grow-1">
             <table class="leaderboard-table light text-white">
                 <thead>
                 <tr>
