--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -44,7 +44,7 @@
                                             }
                                             else if (leaderboard.Entries.Any())
                                             {
-                                                <div class="table-responsive w-100">
+                                                <div class="table-responsive rounded w-100">
                                                     <table class="leaderboard-table light text-white">
                                                         <thead>
                                                             <tr>
