--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/OverallLeaderboardTile.razor
@@ -24,7 +24,7 @@
         }
         else if (_leaderboardEntries != null && _leaderboardEntries.Any())
         {
-            <div class="table-responsive">
+            <div class="table-responsive rounded">
                 <table class="leaderboard-table text-white">
                     <thead>
                         <tr>
