--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/Login.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Authentication/Login.razor
@@ -11,38 +11,56 @@
 <PageTitle>Login</PageTitle>
 
 <div class="page-container">
-    <div class="form-container">
+    <div class="form-container shadow">
         <div class="position-relative mb-4">
-            <NavLink href="/" class="back-button" title="Back to Home">
-                <span class="bi bi-arrow-left-circle-fill"></span>
+            <NavLink href="/" class="back-button flex-center" title="Back to Home">
+                <span class="bi bi-arrow-left-short"></span> Back to Home
             </NavLink>
-
-            <h3 class="text-center fw-bold text-white mb-4">Login</h3>
+            
+            <div class="text-center mb-4 mt-2">
+                <img src="/images/lion-outline-logo.jpg" alt="Lion Logo" style="max-width:60px;"/>
+            </div>
+            
+            <h3 class="text-center fw-bold text-white">Login</h3>
+            <h5 class="text-center fw-normal text-white mb-4">Welcome back</h5>
         </div>
 
         <EditForm Model="_model" OnValidSubmit="HandleLoginAsync" FormName="loginForm">
             <FluentValidationValidator />
             <ApiError Message="@_errorMessage" />
+            
+            <div class="d-grid gap-2">
+                <button type="button" class="btn social-btn google-btn" @onclick="HandleGoogleLogin">
+                    <svg class="social-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><g><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></g></svg>
+                    Continue with Google
+                </button>
+            </div>
+
+            <div class="d-flex align-items-center my-4">
+                <div class="flex-grow-1 border-top"></div>
+                <div class="px-3 text-white fw-bold">OR</div>
+                <div class="flex-grow-1 border-top"></div>
+            </div>
 
             <div class="mb-3">
-                <label for="email" class="form-label text-white">Email address</label>
-                <InputText id="email" 
-                           class="form-control" 
-                           @bind-Value="_model.Email" 
-                           data-lpignore="true" 
-                           autocomplete="off" />
+                <InputText id="email"
+                           class="form-control"
+                           @bind-Value="_model.Email"
+                           data-lpignore="true"
+                           autocomplete="off"
+                           placeholder="Email address"/>
                 <StyledValidationMessage For="@(() => _model.Email)" />
             </div>
 
             <div class="mb-3">
-                <label for="password" class="form-label text-white">Password</label>
                 <div class="input-group">
                     <InputText id="password"
                                type="@(_showPassword ? "text" : "password")"
                                class="form-control"
                                @bind-Value="_model.Password"
                                data-lpignore="true"
-                               autocomplete="new-password" />
+                               autocomplete="new-password"
+                               placeholder="Password"/>
                     <button type="button" class="btn password-toggle-btn" @onclick="TogglePasswordVisibility">
                         <i class="bi @(_showPassword ? "bi-eye-slash-fill" : "bi-eye-fill")"></i>
                     </button>
@@ -51,7 +69,7 @@
             </div>
 
             <div class="d-grid mt-4">
-                <button type="submit" class="btn green-button" disabled="@_isBusy">
+                <button type="submit" class="btn green-button text-pl-purple-1000 input-height" disabled="@_isBusy">
                     @if (_isBusy)
                     {
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -62,26 +80,6 @@
                         <span>Login</span>
                     }
                 </button>
-            </div>
-
-            <div class="d-flex align-items-center my-4">
-                <div class="flex-grow-1 border-top"></div>
-                <div class="px-3 text-white fw-bold">OR</div>
-                <div class="flex-grow-1 border-top"></div>
-            </div>
-
-            <div class="d-grid gap-2">
-                <button type="button" class="btn social-btn google-btn" @onclick="HandleGoogleLogin">
-                    <svg class="social-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><g><path fill="#EA4335" d="M24 9.5c3.54 0 6.71 1.22 9.21 3.6l6.85-6.85C35.9 2.38 30.47 0 24 0 14.62 0 6.51 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"></path><path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6c4.51-4.18 7.09-10.36 7.09-17.65z"></path><path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.59l-7.98-6.19C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"></path><path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6c-2.15 1.45-4.92 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.62 48 24 48z"></path><path fill="none" d="M0 0h48v48H0z"></path></g></svg>
-                    Continue with Google
-                </button>
-@* 
-                <button type="button" class="btn social-btn apple-btn" @onclick="HandleAppleLogin">
-                    <svg class="social-icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="white">
-                        <path d="M18.71 19.5C17.88 20.74 17 21.95 15.66 21.97C14.32 22 13.89 21.18 12.37 21.18C10.84 21.18 10.37 21.95 9.09997 22C7.78997 22.05 6.79997 20.68 5.95997 19.47C4.24997 17 2.93997 12.45 4.69997 9.39C5.56997 7.87 7.12997 6.91 8.81997 6.88C10.1 6.86 11.32 7.75 12.11 7.75C12.89 7.75 14.37 6.68 15.92 6.84C16.57 6.87 18.39 7.1 19.56 8.82C19.47 8.88 17.39 10.1 17.41 12.63C17.44 15.65 20.06 16.66 20.09 16.67C20.06 16.74 19.67 18.11 18.71 19.5ZM13 3.5C13.73 2.67 14.94 2.04 15.94 2C16.07 3.17 15.6 4.35 14.9 5.19C14.21 6.04 13.07 6.7 11.95 6.61C11.8 5.46 12.36 4.26 13 3.5Z" />
-                    </svg>
-                    Continue with Apple
-                </button> *@
             </div>
         </EditForm>
     </div>
