--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
@@ -34,7 +34,7 @@
                                         <small class="text-white-50 centre">@leaderboard.SeasonName</small>
                                     </div>
                                     <div class="league-card-body justify-start w-100">
-                                        <div class="table-responsive w-100">
+                                        <div class="table-responsive rounded w-100">
                                             <table class="leaderboard-table light text-white">
                                                 <thead>
                                                     <tr>
