--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/EndOfSeasonPrizesTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/EndOfSeasonPrizesTile.razor
@@ -15,7 +15,7 @@
         }
         else if (Prizes?.Any() == true)
         {
-            <div class="table-responsive">
+            <div class="table-responsive rounded">
                 <table class="leaderboard-table text-white">
                     <thead>
                         <tr>
