--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
@@ -20,7 +20,7 @@
                 {
                     <tr>
                         <td class="match-info">
-                            <div class="d-flex align-items-center">
+                            <div class="d-flex align-items-center space-around">
                                 <img src="@match.HomeTeamLogoUrl" class="match-logo-small" alt="@match.HomeTeamName Logo"/>
                                 <span class="mx-2 d-sm-none">@match.HomeTeamAbbreviation v @match.AwayTeamAbbreviation</span>
                                 <span class="mx-2 d-none d-sm-block">@match.HomeTeamShortName v @match.AwayTeamShortName</span>
