--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/components/cards.css
@@ -24,6 +24,7 @@
     color: white;
     display: flex;
     flex-direction: column;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35), inset 0 0 0 1px rgba(255, 255, 255, 0.05);
 }
 
     .card.center-content {
