--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
@@ -1,5 +1,16 @@
-﻿.page-container {
-    background-color: var(--pl-purple-800);
+﻿main {
+    background: var(--pl-purple-800);
+}
+
+main.light-grey{
+    background: var(--pl-grey-100);
+}
+
+    main.purple-gradient {
+        background: linear-gradient(135deg, var(--pl-purple-300) 0%, var(--pl-purple-900) 100%);
+    }
+
+.page-container {
     min-height: calc(100vh - 56px);
     display: flex;
     justify-content: center;
@@ -27,8 +38,7 @@
 }
 
 .hero-image {
-    height: 110px;
-    background-color: white;
+    height: 100px;
     border-radius: var(--bs-border-radius);
 }
 
