Auto Publish Rounds 4 Weeks Before Start

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
@@ -16,7 +16,7 @@
     --pl-blue: #04F5FF;
     --pl-blue-light: #03c2b4;
     /* Greens */
-    --pl-green: #00FF85;
+    --pl-green: #00B960;
     --pl-green-light: #84fab0;
     /* Yellows */
     --pl-yellow: #EBFF01;
