--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/colours.css
@@ -20,6 +20,7 @@
     --pl-green-light: #84fab0;
     /* Yellows */
     --pl-yellow: #EBFF01;
+    --pl-orange: #CC8200;
     /* Greys */
     --pl-grey-100: #EAEAEA;
     --pl-grey-200: #DADCE0;
