Make Large Font Badge Icons on Mobile

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MonthlyLeaderboardTile.razor
@@ -36,7 +36,7 @@
                                         {
                                             <div class="d-flex justify-content-end mb-2">
                                                 <div class="@GetRoundsRemainingCss(month.RoundsRemaining)">
-                                                    <span class="badge-icon">
+                                                    <span class="badge-icon large-font">
                                                         <i class="bi bi-@month.RoundsRemaining-circle-fill"></i>
                                                     </span>
 
