--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
@@ -60,7 +60,7 @@
                 <ApiSuccess Message="@_successMessage" />
 
                 <div class="prediction-grid">
-                    @foreach (var match in _pageData.Matches)
+                    @foreach (var match in _pageData.Matches.OrderBy(m => m.MatchDateTime).ThenBy(m => m.HomeTeamAbbreviation))
                     {
                         <div class="prediction-card">
                             <div class="prediction-card-header">
